Фикс копилота №2
